--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "dotenv": "^8.2.0",
+    "dropbox": "^4.0.30",
+    "es6-promise": "^4.2.8",
     "googleapis": "^47.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.15",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/isomorphic-fetch": "0.0.35",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
-    "@types/dotenv": "^8.2.0",
-    "@types/lodash": "^4.14.149",
     "eslint": "^6.8.0"
   }
 }
